--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,7 @@ FetchContent_Declare(
 # For Windows: Prevent overriding the parent project's compiler/linker settings
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
+
+include_directories(include/root/math)
+
+add_executable(corvine src/main.cpp)
