Fixed CMake configuration and added freeGLUT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,26 +2,43 @@ cmake_minimum_required(VERSION 3.14)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# ====================================================================================================
+# Fetching dependencies such as Google Test and freeGLUT via URL
+
+include(FetchContent)
+
+# Google Test
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+)
+
+# freeGLUT
+FetchContent_Declare(
+  freeGLUT
+  URL https://github.com/freeglut/freeglut/releases/download/v3.6.0/freeglut-3.6.0.tar.gz
+)
+
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+FetchContent_MakeAvailable(googletest freeGLUT)
+
+# ====================================================================================================
+
 project(Corvine VERSION 1.0.0)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-add_library(${PROJECT_NAME} SHARED
-    src/main.cpp
-    # Add any extra C++ source files here
+include_directories(include)
+
+add_library(CorvineLibrary STATIC
     src/root/math/corvinemath.cpp
 )
 
-include_directories(include/root/math)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
 
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-)
-# For Windows: Prevent overriding the parent project's compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
+add_executable(${PROJECT_NAME} src/main.cpp)
 
-add_executable(corvine src/main.cpp)
+target_link_directories(Corvine PUBLIC CorvineLibrary)
