OMG I THINK ITS FIXED THIS TIME

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,15 +26,17 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 
 FetchContent_MakeAvailable(googletest freeglut)
 
+# VERY IMPORTANT: Set OPENGL_INCLUDE_DIR to the lib directory of freeglut
+# Otherwise, CMake cannot find GLUT and will throw an error
+set(OPENGL_INCLUDE_DIR ${freeglut_BINARY_DIR}/lib)
 include(FindGLUT)
 
-set(OPENGL_LIBRARY_DIR ${freeglut_BINARY_DIR}/lib)
-
+# Finding FreeGLUT in the build and including its header files
 if(NOT GLUT_FOUND)
   message(ERROR "FreeGLUT not found!")
 endif()
 find_package(GLUT REQUIRED)
-include_directories(${GLUT_INCLUDE_DIR})
+include_directories(GLUT_INCLUDE_DIR)
 
 # Finding OpenGL within the operating system, including its header files, and linking its libraries
 include(FindOpenGL)
@@ -43,16 +45,16 @@ if(NOT OPENGL_FOUND)
   message(ERROR "OpenGL not found!")
 endif()
 find_package(OpenGL REQUIRED)
-include_directories(${OPENGL_INCLUDE_DIR})
+include_directories(OPENGL_INCLUDE_DIR)
+link_directories(OpenGL::GL)
 
 # ====================================================================================================
 
+# Includes root project header files in the include directory
 include_directories(include)
 
 add_executable(${PROJECT_NAME})
 add_subdirectory(src)
 
-target_link_libraries(${PROJECT_NAME} 
-  GLUT::GLUT
-  OpenGL::GL
-)
+# Links FreeGLUT and OpenGL libraries
+target_link_libraries(${PROJECT_NAME} GLUT::GLUT OpenGL::GL)
