--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,26 +19,6 @@ set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 
 FetchContent_MakeAvailable(googletest)
 
-# Including FreeGLUT's header files and linking its libraries
-include(FindGLUT)
-
-if(GLUT_FOUND)
-  find_package(GLUT REQUIRED)
-  include_directories(GLUT_INCLUDE_DIR)
-else()
-  message("GLUT not found, installing using vcpckg")
-  execute_process(COMMAND vcpkg install freeglut)
-endif()
-
-# Finding OpenGL within the operating system, including its header files, and linking its libraries
-include(FindOpenGL)
-
-if(NOT OPENGL_FOUND)
-  message(ERROR "OpenGL not found!")
-endif()
-find_package(OpenGL REQUIRED)
-include_directories(OPENGL_INCLUDE_DIR)
-
 # ====================================================================================================
 
 # Includes root project header files in the include directory
@@ -47,4 +27,25 @@ include_directories(include)
 add_executable(${PROJECT_NAME})
 add_subdirectory(src)
 
-target_link_libraries(${PROJECT_NAME} OpenGL::GL)
+# Including FreeGLUT's header files and linking its libraries
+include(FindGLUT)
+
+if(NOT GLUT_FOUND)
+  message("GLUT not found, installing using vcpckg")
+  execute_process(COMMAND vcpkg install freeglut)
+  set(GLUT_INCLUDE_DIR "C:\\vcpkg\\packages\\freeglut_x64-windows\\include")
+  set(OPENGL_LIBRARY_DIR "C:\\vcpkg\\packages\\freeglut_x64-windows\\lib")
+endif()
+find_package(GLUT REQUIRED)
+include_directories(${GLUT_INCLUDE_DIR})
+
+# Finding OpenGL within the operating system, including its header files, and linking its libraries
+include(FindOpenGL)
+
+if(NOT OPENGL_FOUND)
+  message(ERROR "OpenGL not found!")
+endif()
+find_package(OpenGL REQUIRED)
+include_directories(${OPENGL_INCLUDE_DIR})
+
+target_link_libraries(${PROJECT_NAME} ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})
