--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,8 +33,8 @@ include(FindGLUT)
 if(NOT GLUT_FOUND)
   message("GLUT not found, installing using vcpckg")
   execute_process(COMMAND vcpkg install freeglut)
-  set(GLUT_INCLUDE_DIR "C:\\vcpkg\\packages\\freeglut_x64-windows\\include")
-  set(OPENGL_LIBRARY_DIR "C:\\vcpkg\\packages\\freeglut_x64-windows\\lib")
+  set(GLUT_INCLUDE_DIR VCPKG_ROOT/freeglut_x64-windows/include)
+  set(OPENGL_LIBRARY_DIR VCPKG_ROOT/packages/freeglut_x64-windows/lib)
 endif()
 find_package(GLUT REQUIRED)
 include_directories(${GLUT_INCLUDE_DIR})
